feat: Adding liip_imagine for runtime image resizing

--- a/translations/messages.ar.yml
+++ b/translations/messages.ar.yml
@@ -232,7 +232,7 @@ Photographer: Photographer
 Cake: Cake
 Florist: Florist
 Dresses: Dresses
-Jewellery: Jewellery
+Jewellery: مجوهرات
 Venue: Venue
 Photography: Photography
 Transport: Transport
@@ -271,3 +271,7 @@ Go: بحث
 phone: هاتف
 'Your name': اسمك
 E-Mail: 'البريد الإلكتروني'
+dt: دت
+'Wedding Dress': 'فستان الزفاف'
+Gabès: قابس
+'Wedding Cakes': 'كعك الزفاف'
