feat: Adding user preferences page

--- a/translations/email.ar.yml
+++ b/translations/email.ar.yml
@@ -13,3 +13,10 @@
 'My received enquiries': 'عرض جميع الخدمات'
 'cordially,': 'بشكل ودي,'
 'Fouras team': 'فريق فرص'
+'Welcome to Fouras': 'Welcome to Fouras'
+Home: AR-Home
+Services: Services
+Blog: Blog
+'Are you trying our planning tools ?': 'Are you trying our planning tools ?'
+'Start planning today': 'Start planning today'
+unsubscribe: unsubscribe
