--- a/translations/email.fr.yml
+++ b/translations/email.fr.yml
@@ -20,3 +20,5 @@ Blog: Blog
 'View all services': 'Voir tous les services'
 'Enquiry received': 'Demande reçue'
 unsubscribe: unsubscribe
+'Are you trying our planning tools ?': 'Are you trying our planning tools ?'
+'Start planning today': 'Start planning today'
