--- a/translations/messages.ar.yml
+++ b/translations/messages.ar.yml
@@ -275,3 +275,13 @@ dt: دت
 'Wedding Dress': 'فستان الزفاف'
 Gabès: قابس
 'Wedding Cakes': 'كعك الزفاف'
+'Received enquiries': 'الاستفسارات الواردة'
+'My preferences': خياراتي
+'No enquiries yet': 'No enquiries yet'
+here: here
+'Propose more services %link% to get some enqueries': 'Propose more services %link% to get some enqueries'
+'Email Notifications': 'إعلامات بالبريد الإلكتروني'
+'Enquiry Notifications': 'إعلام بوصول إستفسار'
+Newsletter: 'تلقي الأخبار'
+'Hide phone number': 'إخفاء رقم الهاتف'
+'Email language': 'لغة البريد الإلكتروني'
