--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -208,3 +208,12 @@ Honeymoon: 'Voyage de noces'
 'Vendor profile': 'Profile du prestataire'
 Service: Service
 dt: dt
+'Received enquiries': 'Received enquiries'
+'My preferences': 'Mes préférences'
+'No enquiries yet': 'No enquiries yet'
+here: here
+'Propose more services %link% to get some enqueries': 'Propose more services %link% to get some enqueries'
+'Email Notifications': 'Notifications par email'
+'Enquiry Notifications': 'Demandes de renseignements'
+'Hide phone number': 'Cacher le numéro de téléphone'
+'Email language': 'Langue des emails'
