feat: Adding subscription crud in front and backoffice

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -217,3 +217,24 @@ here: here
 'Enquiry Notifications': 'Demandes de renseignements'
 'Hide phone number': 'Cacher le numéro de téléphone'
 'Email language': 'Langue des emails'
+'Thank you for subscribing to our newsletter': 'Thank you for subscribing to our newsletter'
+'You are now unsubscribed from our newsletter': 'You are now unsubscribed from our newsletter'
+Pricing: Pricing
+'About Fouras': 'About Fouras'
+'Subscribe to newsletter': 'Subscribe to newsletter'
+'© %year% All rights reserved.': '© %year% All rights reserved.'
+'Already subscribed using this address: %address%': 'Already subscribed using this address: %address%'
+Unsubscribe: Unsubscribe
+'Subscribe Now': 'Subscribe Now'
+'Selected plan:': 'Selected plan:'
+'Send request now': 'Send request now'
+month: month
+'Select Plan Now': 'Select Plan Now'
+'We received your request to subscribe to the plan:': 'Nous avons reçu votre demande de souscription au pack'
+'We will contact you as soon as possible to validate your subscription': 'Nous vous contacterons dans les plus brefs délais pour valider votre abonnement'
+'Your current plan:': 'Votre plan actuel:'
+'Expiration date:': 'Date expiration:'
+'Choose your plan:': 'Choisissez votre pack:'
+'Fouras - backoffice': 'Fouras - backoffice'
+Enregistrer: Enregistrer
+'You can change your plan any time': 'Vous pouvez changer de pack à tout moments'
